# cosmolayer

./: .gitignore  FIX_SUMMARY.md  LICENSE.md  PR_DESCRIPTION.md  README.md  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: Anaconda.yaml  Docs.yaml  Linter.yaml  Linux.yaml  MacOS.yaml  PyPI.yaml  Windows.yaml
cosmolayer/: __init__.py  cosmodata.py  cosmolayer.py  cosmolightning.py  cosmosolver.py  cosmospace.py  utils.py
cosmolayer/cosmosac/: __init__.py  component.py  constants.py  datapoint.py  interaction_matrices.py  mixture.py  model.py  segment_groups.py  visualize.py
cosmolayer/data/: C=C(N)O.cosmo  README.md
cosmolayer/data/cosmo-sac-2002/: Sigma_Profile_Database_Index_v2.txt  VT2005-0844-PROF.txt  VT2005-0898-PROF.txt  VT2005-1076-PROF.txt
cosmolayer/data/cosmo-sac-2010/: CF.sigma  NCCO.sigma  O.sigma
cosmolayer/parser/: __init__.py  common.py  dmol3.py  parser.py  turbomole.py  utils.py
cosmolayer/sac/: __init__.py  component.py  interaction_matrices.py  mixture.py  segment_groups.py
cosmolayer/tests/: conftest.py  test_against_cosmo_sac_2002.py  test_against_cosmo_sac_2010.py  test_cosmolayer.py  test_cosmolayer_class_methods.py  test_cosmolightning.py  test_cosmosac_installation.py  test_cosmospace_grad.py  test_cuda.py  test_datapoint.py  test_dmol3_integration.py  test_mixture.py
devtools/: README.md
devtools/conda-envs/: deployment_env.yaml  docs_env.yaml  lint_env.yaml  test_env.yaml
devtools/conda-recipes/anaconda/: meta.yaml
devtools/scripts/: cosmosac.patch  format_and_check.sh  install_cosmosac.ps1  install_cosmosac.sh
docs/: Makefile  README.md  conf.py  index.html  index.rst  make.bat  refs.bib  visualization.rst
docs/api/: index.rst
docs/development/: genindex.html  getting_started.html  index.html  objects.inv  references.html  search.html  searchindex.js  visualization.html
docs/development/_modules/: index.html
docs/development/_sources/: index.rst.txt
docs/development/api/: COSMO_SAC_2002_AREA_PER_SEGMENT.html  COSMO_SAC_2002_EXPONENTS.html  COSMO_SAC_2010_AREA_PER_SEGMENT.html  COSMO_SAC_2010_EXPONENTS.html  Component.html  CosmoLayer.html  CosmoLightningModule.html  CosmoSac2002Mixture.html  CosmoSac2002Model.html  CosmoSac2010Mixture.html  CosmoSac2010Model.html  CosmoSacMixtureDatapoint.html  CosmoSacModel.html  CosmoSolver.html  CosmoSpace.html  LogGammaLightningModule.html  Mixture.html  MixtureDatapoint.html  MixtureDataset.html  MixtureInferenceDataset.html  MixtureTrainingDataset.html  Model.html  core.html  cosmosac.html  create_cosmo_sac_2002_matrix.html  create_cosmo_sac_2010_matrices.html  index.html  main.html
docs/development/coverage/: class_index.html  function_index.html  index.html  status.json  z_199c3f6696ecbe59___init___py.html  z_199c3f6696ecbe59_cosmodata_py.html  z_199c3f6696ecbe59_cosmolayer_py.html  z_199c3f6696ecbe59_cosmolightning_py.html  z_199c3f6696ecbe59_cosmosolver_py.html  z_199c3f6696ecbe59_cosmospace_py.html  z_199c3f6696ecbe59_utils_py.html  z_262791d3b3c6ea39___init___py.html  z_262791d3b3c6ea39_component_py.html  z_262791d3b3c6ea39_interaction_matrices_py.html  z_262791d3b3c6ea39_mixture_py.html  z_262791d3b3c6ea39_segment_groups_py.html  z_a0283ac157735d9e___init___py.html  z_a0283ac157735d9e_common_py.html  z_a0283ac157735d9e_dmol3_py.html  z_a0283ac157735d9e_parser_py.html  z_a0283ac157735d9e_turbomole_py.html  z_a0283ac157735d9e_utils_py.html  z_a5e5b5599ba543e6___init___py.html  z_a97ec370a3cb32de___init___py.html  z_a97ec370a3cb32de_component_py.html  z_a97ec370a3cb32de_constants_py.html  z_a97ec370a3cb32de_datapoint_py.html  z_a97ec370a3cb32de_datasets_py.html  z_a97ec370a3cb32de_interaction_matrices_py.html  z_a97ec370a3cb32de_mixture_py.html  z_a97ec370a3cb32de_model_py.html  z_a97ec370a3cb32de_segment_groups_py.html  z_a97ec370a3cb32de_visualize_py.html
docs/latest/: index.html  objects.inv  searchindex.js
docs/latest/_sources/: getting_started.rst.txt
docs/latest/api/: Component.html  CosmoSolver.html  LogGammaLightningModule.html  MixtureInferenceDataset.html  Model.html
docs/latest/coverage/: class_index.html  index.html  status.json  z_199c3f6696ecbe59___init___py.html  z_199c3f6696ecbe59_cosmodata_py.html  z_199c3f6696ecbe59_cosmolayer_py.html  z_199c3f6696ecbe59_cosmolightning_py.html  z_199c3f6696ecbe59_cosmosolver_py.html  z_199c3f6696ecbe59_utils_py.html  z_a0283ac157735d9e___init___py.html  z_a0283ac157735d9e_dmol3_py.html  z_a0283ac157735d9e_parser_py.html  z_a0283ac157735d9e_utils_py.html  z_a5e5b5599ba543e6___init___py.html  z_a97ec370a3cb32de_component_py.html  z_a97ec370a3cb32de_constants_py.html  z_a97ec370a3cb32de_datapoint_py.html  z_a97ec370a3cb32de_interaction_matrices_py.html  z_a97ec370a3cb32de_mixture_py.html  z_a97ec370a3cb32de_model_py.html  z_a97ec370a3cb32de_segment_groups_py.html  z_a97ec370a3cb32de_visualize_py.html
docs/v0.1.0/: genindex.html  getting_started.html  references.html  search.html  visualization.html
docs/v0.1.0/_modules/: index.html
docs/v0.1.0/api/: Component.html  CosmoLayer.html  CosmoSac2002Model.html  CosmoSac2010Model.html  CosmoSacMixtureDatapoint.html  Mixture.html  MixtureDatapoint.html  MixtureTrainingDataset.html  core.html  cosmosac.html  index.html
docs/v0.1.0/coverage/: class_index.html  function_index.html  z_199c3f6696ecbe59___init___py.html  z_199c3f6696ecbe59_cosmolayer_py.html  (+15 more)
sigma_profiles/: .gitignore
(+60 files in other folders)
